syntax = "proto3";

package com.drmq.protocol;

option java_package = "com.drmq.protocol";
option java_outer_classname = "DRMQProtocol";
option java_multiple_files = false;

// Request to produce a message to a topic
message ProduceRequest {
    string topic = 1;
    bytes payload = 2;
    optional string key = 3;  // Optional message key for partitioning (future use)
    int64 timestamp = 4;      // Client-side timestamp
}

// Response after producing a message
message ProduceResponse {
    bool success = 1;
    int64 offset = 2;         // Assigned offset if successful
    string error_message = 3; // Error details if failed
}

// Internal message representation stored in the broker
message StoredMessage {
    int64 offset = 1;
    string topic = 2;
    bytes payload = 3;
    optional string key = 4;
    int64 timestamp = 5;      // Original client timestamp
    int64 stored_at = 6;      // Broker storage timestamp
}

// Request to consume messages from a topic
message ConsumeRequest {
    string topic = 1;
    int64 from_offset = 2;    // Starting offset (inclusive)
    int32 max_messages = 3;   // Maximum number of messages to fetch
}

// Response containing consumed messages
message ConsumeResponse {
    bool success = 1;
    repeated StoredMessage messages = 2;  // List of messages
    string error_message = 3;             // Error details if failed
}

// Envelope for TCP framing - wraps all messages with type info
message MessageEnvelope {
    MessageType type = 1;
    bytes payload = 2;  // Serialized inner message
}

enum MessageType {
    UNKNOWN = 0;
    PRODUCE_REQUEST = 1;
    PRODUCE_RESPONSE = 2;
    CONSUME_REQUEST = 3;
    CONSUME_RESPONSE = 4;
    HEARTBEAT = 5;
}
